--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,12 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "hardhat": "^2.17.1",
-    "hardhat-deploy": "^0.11.34",
-    "type": "module"
+    "hardhat-deploy": "^0.11.34"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.6.1",
+    "@chainlink/env-enc": "^1.0.5",
+    "dotenv": "^16.3.1",
     "web3": "^4.0.3"
   }
 }
