Display selected product on the column

--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
+    "@types/react": "^18.2.20",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3"
   },
