--- a/app/packages/hardhat/package.json
+++ b/app/packages/hardhat/package.json
@@ -37,7 +37,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.1",
     "hardhat": "^2.11.2",
-    "hardhat-deploy": "^0.11.26",
+    "hardhat-deploy": "^0.11.34",
     "hardhat-gas-reporter": "^1.0.9",
     "prettier": "^2.8.4",
     "solidity-coverage": "^0.8.2",
@@ -46,6 +46,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@openzeppelin/contracts": "^4.8.1",
     "dotenv": "^16.0.3",
     "envfile": "^6.18.0",
