--- a/app/packages/hardhat/package.json
+++ b/app/packages/hardhat/package.json
@@ -14,6 +14,7 @@
     "verify": "hardhat etherscan-verify"
   },
   "devDependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
     "@matterlabs/hardhat-zksync-solc": "^0.3.17",
